--- a/www/resources/data/17/config.json
+++ b/www/resources/data/17/config.json
@@ -1,26 +1,26 @@
 {
-    "id": 13,
-    "title": 13,
-    "key": "o_13",
-    "orig": "pic (43).png",
+    "id": 17,
+    "title": 17,
+    "key": "o_17",
+    "orig": "w5.png",
     "mod": {
         "key": "n",
         "name": "n",
         "r": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
+            -60,
+            -50,
+            -50,
+            120,
+            100,
+            100
         ],
         "r1": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
+            -50,
+            -50,
+            -50,
+            100,
+            100,
+            100
         ]
     },
     "param": {
@@ -38,16 +38,16 @@
         0
     ],
     "num": [
-        1000,
-        1000,
+        100,
+        0,
         0,
         0
     ],
     "str": [
-        "m_3",
-        "#0000ff",
-        "0",
-        "0"
+        "BInSten",
+        "Unik_Vent",
+        "1110001100",
+        "100"
     ],
     "resurs": {
         "array": []
