--- a/www/resources/data/18/config.json
+++ b/www/resources/data/18/config.json
@@ -1,8 +1,8 @@
 {
-    "id": 13,
-    "title": 13,
-    "key": "o_13",
-    "orig": "pic (43).png",
+    "id": 18,
+    "title": 18,
+    "key": "o_18",
+    "orig": "cat.png",
     "mod": {
         "key": "n",
         "name": "n",
@@ -38,14 +38,14 @@
         0
     ],
     "num": [
-        1000,
-        1000,
+        0,
+        0,
         0,
         0
     ],
     "str": [
-        "m_3",
-        "null",
+        "0",
+        "0",
         "0",
         "0"
     ],
