--- a/www/resources/data/m_1/config.json
+++ b/www/resources/data/m_1/config.json
@@ -11,7 +11,7 @@
         "blending": 1,
         "side": 0,
         "opacity": 1,
-        "transparent": false,
+        "transparent": true,
         "alphaTest": 0,
         "wireframe": false,
         "reflectivity": 1,
@@ -21,7 +21,7 @@
         "shininess": 30,
         "textur": [
             {
-                "id": "t_3",
+                "id": "t_6",
                 "name": "map"
             }
         ]
