--- a/www/resources/data/10/config.json
+++ b/www/resources/data/10/config.json
@@ -2,17 +2,17 @@
     "id": 10,
     "title": 10,
     "key": "o_10",
-    "orig": "w.png",
+    "orig": "pic (70).png",
     "mod": {
         "key": "n",
         "name": "n",
         "r": [
-            0,
-            0,
-            1,
-            0,
-            0,
-            0
+            -20,
+            -10,
+            -10,
+            40,
+            20,
+            20
         ],
         "r1": [
             0,
@@ -38,16 +38,16 @@
         0
     ],
     "num": [
-        0,
+        10,
         0,
         0,
         0
     ],
     "str": [
-        "0",
-        "0",
-        "0",
-        "0"
+        "BInSten",
+        "Unik_Steps",
+        "1110011100",
+        "001"
     ],
     "resurs": {
         "array": []
