--- a/www/resources/data/9/config.json
+++ b/www/resources/data/9/config.json
@@ -7,20 +7,20 @@
         "key": "n",
         "name": "n",
         "r": [
-            0,
-            0,
-            0,
-            1,
-            0,
-            0
+            -50,
+            -110,
+            -50,
+            100,
+            220,
+            100
         ],
         "r1": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
+            -50,
+            -50,
+            -50,
+            100,
+            100,
+            100
         ]
     },
     "param": {
@@ -38,16 +38,16 @@
         0
     ],
     "num": [
-        0,
+        10,
         0,
         0,
         0
     ],
     "str": [
-        "0",
-        "0",
-        "0",
-        "0"
+        "BInSten",
+        "Not",
+        "1110011100",
+        "100"
     ],
     "resurs": {
         "array": []
